--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
-body {
+* {
 	margin: 0;
 	box-sizing: border-box;
+}
+
+body {
 	background-color: hsl(0, 0%, 95%);
 	color: hsl(0, 0%, 50%);
+}
+
+a {
+	text-decoration: none;
+	color: inherit;
 }
 
 h1,
@@ -89,10 +97,72 @@ p {
 	color: hsl(0, 0%, 20%);
 }
 
+.status {
+	display: flex;
+	align-items: center;
+	margin-bottom: 1rem;
+}
+
 .btn:hover {
 	box-shadow: 0 0 15px 0 hsl(0, 0%, 0%, .15);
 	background-color: hsl(0, 0%, 20%);
 	color: hsl(0, 0%, 80%);
+}
+
+.circulStatus.alive {
+	background-color: hsl(90, 100%, 39%);
+}
+
+.circulStatus.dead {
+	background-color: hsl(0, 100%, 39%);
+}
+
+.circulStatus.unknown {
+	background-color: hsl(0, 0%, 39%);
+}
+
+.circulStatus {
+	width: 10px;
+	height: 10px;
+	border-radius: 50%;
+
+	margin-right: .5rem;
+	display: flex;
+}
+
+.origin {
+	color: hsl(0, 0%, 50%);
+	font-size: 1.1em;
+}
+
+.origin a {
+	color: hsl(0, 0%, 40%);
+}
+
+.origin a:hover {
+	color: hsl(0, 0%, 60%);
+}
+
+.articleNull {
+	padding: 2rem 1rem;
+	background-color: hsl(0, 0%, 93%);
+	color: hsl(0, 0%, 50%);
+	text-align: center;
+	border-radius: .5rem;
+	box-shadow: 0 0 15px 0 hsl(0, 0%, 0%, .15);
+	margin-top: 2rem;
+}
+
+.formSearch input:focus,
+.formSearch input:active,
+.formSearch input {
+	width: 100%;
+	border: none;
+	box-shadow: 0 0 15px 0 hsl(0, 0%, 0%, .15);
+	padding: .5rem 1rem;
+	border-radius: .5rem;
+	outline: none;
+	color: hsl(0, 0%, 50%);
 }
 
 @media screen and (max-width: 600px) {
